testdata/asm/invalid/fncall_invalid_04.lisp
;;
(defcolumns (X :i16) (Y :i16))
(defcall (Y Y) f (X))
